--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+.calc{
+  width: 320px;
+  margin: 100px auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*  input design */
+#answer{
+  background-color: #f5f5f5;
+  padding: 10px;
+  font-size: 35px;
+  width: 295px;
+  height: 45px;
+  text-align: right;
+  box-direction: 3-x solid #333;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*  design for all button */
+.button{
+  background-color: #333;
+  height: 60px;
+  width: 80px;
+  font-size: 30px;
+  border: 1px solid black;
+  float:  left;
+  
 }
+.button1{
+  background-color:grey;
+  height: 60px;
+  width: 80px;
+  font-size: 30px;
+  border: 1px solid black;
+  float:  left;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*  design for clear and = eqaual button */
+.button3{
+  background-color: #333;
+  height: 80px;
+  width: 50%;
+  font-size: 30px;
+  border: 1px solid black;
+  float:  left;
 }
